--- a/src/popup.html
+++ b/src/popup.html
@@ -13,6 +13,7 @@
 
       <button id="group-ai" class="primary" type="button">Group by AI</button>
       <button id="group-domain" class="ghost" type="button">Group by Domain</button>
+      <button id="undo-grouping" class="ghost warning" type="button">Undo Last Grouping</button>
       <button id="open-options" class="ghost" type="button">Trigger Settings</button>
 
       <p class="hint">Tip: keyboard shortcut can be edited at chrome://extensions/shortcuts.</p>
