feat: optimize tab grouping and revamp TapOG interactive site

--- a/site/index.html
+++ b/site/index.html
@@ -15,26 +15,50 @@
   </head>
   <body>
     <div class="noise"></div>
+    <div class="world-logo" id="worldLogo" aria-hidden="true">
+      <img src="assets/logo-primary.png" alt="" />
+    </div>
+    <div class="glow glow-a"></div>
+    <div class="glow glow-b"></div>
     <header class="topbar">
       <a class="brand" href="#">
         <img src="assets/logo-primary.png" alt="tapog.ai logo" />
-        <span>tapog.ai</span>
+        <span>TapOG</span>
       </a>
       <a class="ghost-btn" href="https://github.com/HOYALIM/tapog.ai" target="_blank" rel="noreferrer">GitHub</a>
     </header>
 
     <main>
-      <section class="hero">
-        <p class="kicker">Chrome Extension</p>
-        <h1>From tab chaos<br />to clean groups<br />in one action.</h1>
-        <p class="lead">
-          tapog.ai lets you group tabs by AI or by domain instantly. Keep momentum, not tab clutter.
-        </p>
-        <div class="cta-row">
-          <a class="primary-btn" href="https://chrome.google.com/webstore/devconsole" target="_blank" rel="noreferrer"
-            >Publish Console</a
-          >
-          <a class="ghost-btn" href="https://raw.githubusercontent.com/HOYALIM/tapog.ai/main/PRIVACY_POLICY.md" target="_blank" rel="noreferrer">Privacy Policy</a>
+      <section class="hero hero-grid">
+        <div class="hero-copy">
+          <p class="kicker">Chrome Extension</p>
+          <h1>Tap once.<br />Group smart.<br />Move fast.</h1>
+          <p class="lead">
+            TapOG groups tabs by AI or domain in one flow. Built for speed, local-first, and clean context switching.
+          </p>
+          <div class="cta-row">
+            <a class="primary-btn" href="https://chromewebstore.google.com/" target="_blank" rel="noreferrer"
+              >Chrome Web Store</a
+            >
+            <a
+              class="ghost-btn"
+              href="https://raw.githubusercontent.com/HOYALIM/tapog.ai/main/PRIVACY_POLICY.md"
+              target="_blank"
+              rel="noreferrer"
+              >Privacy Policy</a
+            >
+          </div>
+        </div>
+
+        <div class="hero-visual">
+          <div class="logo-stage" id="logoStage" aria-hidden="true">
+            <div class="halo"></div>
+            <div class="logo-orb">
+              <img src="assets/logo-primary.png" alt="" />
+            </div>
+            <div class="scanline"></div>
+            <div class="logo-label">TapOG.ai</div>
+          </div>
         </div>
       </section>
 
@@ -60,8 +84,9 @@
     </main>
 
     <footer>
-      <span>© tapog.ai</span>
+      <span>© TapOG</span>
       <a href="mailto:subhoya@gmail.com">subhoya@gmail.com</a>
     </footer>
+    <script src="main.js"></script>
   </body>
 </html>
