--- a/site/index.html
+++ b/site/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-      <section class="hero hero-grid">
+      <section class="hero">
         <div class="hero-copy">
           <p class="kicker">Chrome Extension</p>
           <h1>Tap once.<br />Group smart.<br />Move fast.</h1>
@@ -47,17 +47,6 @@
               rel="noreferrer"
               >Privacy Policy</a
             >
-          </div>
-        </div>
-
-        <div class="hero-visual">
-          <div class="logo-stage" id="logoStage" aria-hidden="true">
-            <div class="halo"></div>
-            <div class="logo-orb">
-              <img src="assets/logo-primary.png" alt="" />
-            </div>
-            <div class="scanline"></div>
-            <div class="logo-label">TapOG.ai</div>
           </div>
         </div>
       </section>
